--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@types/node": "^13.11.1",
     "parcel-bundler": "^1.12.4",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "http-server": "^0.12.1"
   }
 }
